Finish all api and update database
